--- a/deploy/tmpl-vm.jinja
+++ b/deploy/tmpl-vm.jinja
@@ -29,9 +29,13 @@ resources:
           sudo apt-get install -y software-properties-common python-software-properties
           sudo apt-get update
           sudo apt install -y -t jessie-backports  openjdk-8-jre-headless ca-certificates-java
-          sudo apt-get install -y openjdk-8-jre
+          sudo apt-get install -y openjdk-8-jdk
           sudo apt-get -y install apt-transport-https
           echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
           sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
           sudo apt-get update
           sudo apt-get install -y sbt=1.0.2
+          sudo mkdir -p /metrifier/bench_results
+          sudo gsutil cp -R gs://metrifier /
+          sudo git clone https://github.com/47deg/metrifier.git /metrifier/repo && cd /metrifier/repo
+          sudo chmod -R 777 /metrifier/
