--- a/deploy/tmpl-compute.jinja
+++ b/deploy/tmpl-compute.jinja
@@ -1,26 +1,26 @@
 {% set FIREWALL = env["deployment"] + "-firewall" %}
 
 resources:
-- name: http-server-vm
-  type: tmpl-vm.jinja
-  properties:
-    machineType: n1-standard-1
-    zone: us-central1-f
+# - name: http-server-vm
+#   type: tmpl-vm.jinja
+#   properties:
+#     machineType: n1-standard-2
+#     zone: us-central1-f
 - name: rpc-proto-server-vm
   type: tmpl-vm.jinja
   properties:
-    machineType: n1-standard-1
+    machineType: n1-standard-2
     zone: us-central1-f
 - name: rpc-avro-server-vm
   type: tmpl-vm.jinja
   properties:
-    machineType: n1-standard-1
+    machineType: n1-standard-2
     zone: us-central1-f
-- name: http-jmh-vm
-  type: tmpl-vm.jinja
-  properties:
-    machineType: n1-standard-1
-    zone: us-central1-f
+# - name: http-jmh-vm
+#   type: tmpl-vm.jinja
+#   properties:
+#     machineType: n1-standard-1
+#     zone: us-central1-f
 - name: rpc-proto-jmh-vm
   type: tmpl-vm.jinja
   properties:
