Uncomments http gcp instances

--- a/deploy/tmpl-compute.jinja
+++ b/deploy/tmpl-compute.jinja
@@ -1,11 +1,11 @@
 {% set FIREWALL = env["deployment"] + "-firewall" %}
 
 resources:
-# - name: http-server-vm
-#   type: tmpl-vm.jinja
-#   properties:
-#     machineType: n1-standard-2
-#     zone: us-central1-f
+- name: http-server-vm
+  type: tmpl-vm.jinja
+  properties:
+    machineType: n1-standard-2
+    zone: us-central1-f
 - name: rpc-proto-server-vm
   type: tmpl-vm.jinja
   properties:
@@ -16,11 +16,11 @@ resources:
   properties:
     machineType: n1-standard-2
     zone: us-central1-f
-# - name: http-jmh-vm
-#   type: tmpl-vm.jinja
-#   properties:
-#     machineType: n1-standard-1
-#     zone: us-central1-f
+- name: http-jmh-vm
+  type: tmpl-vm.jinja
+  properties:
+    machineType: n1-standard-1
+    zone: us-central1-f
 - name: rpc-proto-jmh-vm
   type: tmpl-vm.jinja
   properties:
