Migrates from 47deg to 47degrees GH organization

--- a/deploy/tmpl-vm.jinja
+++ b/deploy/tmpl-vm.jinja
@@ -37,5 +37,5 @@ resources:
           sudo apt-get install -y sbt=1.0.2
           sudo mkdir -p /metrifier/bench_results
           sudo gsutil cp -R gs://metrifier /
-          sudo git clone https://github.com/47deg/metrifier.git /metrifier/repo && cd /metrifier/repo
+          sudo git clone https://github.com/47degrees/metrifier.git /metrifier/repo && cd /metrifier/repo
           sudo chmod -R 777 /metrifier/
